[package]
name = "histongram"
version = "0.2.1"
edition = "2021"

description = "A small crate for counting n-grams"

license = "MIT OR Apache-2.0"

repository = "https://github.com/tdittr/histongram"
authors = [
    "tdittr <td-github@orangecar.org",
]

[features]
default = []
serde = ["dep:serde", "hashbrown/serde"]

[dependencies]
hashbrown = "0.12.3"
serde = { version = "1", optional = true }

[dev-dependencies]
insta = { version = "1.20.0", features = ["ron"] }
criterion = "0.4.0"
ahash = "0.8.0"
compact_str = "0.6.1"
rustc-hash = "1.1.0"


[[bench]]
name = "histogram"
harness = false

# Inspired by tokio
[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]