[workspace]
members = ["python"]

[workspace.package]
version = "0.2.1"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["tdittr <td-github@orangecar.org"]
repository = "https://github.com/tdittr/histongram"

[package]
name = "histongram"
description = "A small crate for counting n-grams"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[features]
default = []
cli = ["dep:clap", "dep:color-eyre", "dep:itertools"]
serde = ["dep:serde", "hashbrown/serde"]

[dependencies]
hashbrown = "0.12.3"
compact_str = "0.6.1"
serde = { version = "1", optional = true }

# CLI dependencies
clap = { version = "4.0.2", features = ["derive"], optional = true }
color-eyre = { version = "0.6.2", optional = true }
itertools = { version = "0.10.5", optional = true }

[dev-dependencies]
insta = { version = "1.20.0", features = ["ron"] }
proptest = "1.0.0"
criterion = "0.4.0"
ahash = "0.8.0"
compact_str = "0.6.1"
rustc-hash = "1.1.0"

[[bench]]
name = "histogram"
harness = false

[[bin]]
name = "histongram"
required-features = ["cli"]

# Inspired by tokio
[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]