[workspace]
members = ["python"]

[workspace.package]
version = "0.2.1"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["tdittr <td-github@orangecar.org"]
repository = "https://github.com/tdittr/histongram"

[package]
name = "histongram"
description = "A small crate for counting n-grams"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[features]
default = []
serde = ["dep:serde", "hashbrown/serde"]

[dependencies]
hashbrown = "0.14.0"
serde = { version = "1", optional = true }

[dev-dependencies]
insta = { version = "1.20.0", features = ["ron"] }
criterion = "0.4.0"
ahash = "0.8.0"
compact_str = "0.7.0"
rustc-hash = "1.1.0"

[[bench]]
name = "histogram"
harness = false

# Inspired by tokio
[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]