[package]
name = "histongram-python"
description = "Python bindings for histongram"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[lib]
name = "histongram"
crate-type = ["cdylib"]

[dependencies]
histongram = { path = ".." }
pyo3 = { version = "0.21.0", features = ["extension-module", "abi3", "abi3-py37"] }
compact_str = "0.7.0"